--- a/index.html
+++ b/index.html
@@ -358,8 +358,8 @@
                 <div class="col-12 col-md-6 col-lg-4 ">
                     <div class=" card bg-dark text-white ">
                         <img src="images/images.jpg " class="card-img img-fluid p-5 image-grayscale" alt="...">
-                        <div class="card-img-overlay orange-color ">
-                            <h5 class="card-title">Honda Care® Plans</h5>
+                        <div class="card-img-overlay  ">
+                            <h5 class="card-title orange-color">Honda Care® Plans</h5>
                             <p class="card-text pt2">Experience the benefits of protecting and maintaining your vehicle
                                 by choosing from a variety of Honda Care® plans. Vehicles less than three years old with
                                 fewer than 36.</p>
@@ -370,8 +370,8 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class=" card bg-dark text-white ">
                         <img src="images/images.jpg " class="card-img  img-fluid p-5 " alt="...">
-                        <div class="card-img-overlay orange-color">
-                            <h5 class="card-title">Honda Care® Plans</h5>
+                        <div class="card-img-overlay ">
+                            <h5 class="card-title orange-color">Honda Care® Plans</h5>
                             <p class="card-text pt2">Atlanta Speedwerks leads Honda Civic Type R TCRs at Lime Rock.</p>
                             <p class="card-text">JULY 29, 2021</p>
                         </div>
@@ -380,8 +380,8 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class=" card bg-dark text-white ">
                         <img src="images/images.jpg " class="card-img  img-fluid p-5 image-grayscale" alt="...">
-                        <div class="card-img-overlay orange-color">
-                            <h5 class="card-title">Honda Care® Plans</h5>
+                        <div class="card-img-overlay ">
+                            <h5 class="card-title orange-color">Honda Care® Plans</h5>
                             <p class="card-text pt2">Atlanta Speedwerks leads Honda Civic Type R TCRs at Lime Rock.</p>
                             <p class="card-text">JULY 29, 2021</p>
                         </div>
@@ -390,8 +390,8 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class=" card bg-dark text-white ">
                         <img src="images/images.jpg " class="card-img  img-fluid p-5 " alt="...">
-                        <div class="card-img-overlay orange-color">
-                            <h5 class="card-title">Honda Care® Plans</h5>
+                        <div class="card-img-overlay">
+                            <h5 class="card-title orange-color">Honda Care® Plans</h5>
                             <p class="card-text pt2">Atlanta Speedwerks leads Honda Civic Type R TCRs at Lime Rock.</p>
                             <p class="card-text">JULY 29, 2021</p>
                         </div>
@@ -400,8 +400,8 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class=" card bg-dark text-white ">
                         <img src="images/images.jpg " class="card-img  img-fluid p-5 image-grayscale" alt="...">
-                        <div class="card-img-overlay orange-color">
-                            <h5 class="card-title">Honda Care® Plans</h5>
+                        <div class="card-img-overlay ">
+                            <h5 class="card-title orange-color">Honda Care® Plans</h5>
                             <p class="card-text pt2">Atlanta Speedwerks leads Honda Civic Type R TCRs at Lime Rock.</p>
                             <p class="card-text">JULY 29, 2021</p>
                         </div>
@@ -410,8 +410,8 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class=" card bg-dark text-white ">
                         <img src="images/images.jpg " class="card-img  img-fluid p-5 " alt="...">
-                        <div class="card-img-overlay orange-color">
-                            <h5 class="card-title">Honda Care® Plans</h5>
+                        <div class="card-img-overlay ">
+                            <h5 class="card-title orange-color">Honda Care® Plans</h5>
                             <p class="card-text pt2">Atlanta Speedwerks leads Honda Civic Type R TCRs at Lime Rock.</p>
                             <p class="card-text">JULY 29, 2021</p>
                         </div>
