--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                             <img src="images/user-1.png" class="card-img-top " alt="...">
                         </div>
                         <div class="card-body">
-                            <p class="card-text text-center w-75 ms-5">Slate helps you see how many more days you need
+                            <p class="card-text text-center w-75 m-auto">Slate helps you see how many more days you need
                                 to work to reach your financial goal for the month and year.</p>
                         </div>
                         <div class="text-center">
@@ -161,7 +161,7 @@
                             <img src="images/user-2.png" class="card-img-top " alt=" ...">
                         </div>
                         <div class="card-body">
-                            <p class="card-text text-center w-75 ms-5">Slate helps you see how many more days you need
+                            <p class="card-text text-center w-75 m-auto">Slate helps you see how many more days you need
                                 to work to reach your financial goal for the month and year.</p>
                         </div>
                         <div class="text-center">
@@ -181,7 +181,7 @@
                             <img src="images/user-1.png" class="card-img-top " alt=" ...">
                         </div>
                         <div class="card-body">
-                            <p class="card-text text-center w-75 ms-5">Slate helps you see how many more days you need
+                            <p class="card-text text-center w-75 m-auto">Slate helps you see how many more days you need
                                 to work to reach your financial goal for the month and year.</p>
                         </div>
                         <div class="text-center">
@@ -204,7 +204,7 @@
                 Frequently Asked <span class="orange-color">Questions</span>
             </h1>
             <div class="row row-cols-1 row-cols-md-2 g-4 d-flex py-5 align-items-center">
-                <div class="col-12  col-lg-4 me-auto rounded">
+                <div class="col-12  col-lg-4 m-auto rounded">
                     <img class="img-fluid" src="images/faq.png" width="w-100" alt="">
                 </div>
                 <div>
@@ -301,7 +301,7 @@
             <h1 class="pt-3 text-center fw-bold ">B<span class="orange-color">log</span>s</h1>
             <div class="row  py-5 border border-2 m-1 rounded rounded-3 shadow">
                 <!-- single blogs  -->
-                <div class="col-12 col-md-12 col-lg-6 d-flex align-items-center p-3 image-grayscale">
+                <div class="col-12 col-md-12 col-lg-6 d-flex align-items-center p-3 ">
                     <div>
                         <h1 class="fw-bold">Automatic DCT Transmission </h1>
                         <h6 class="fw-bold">Exclusive technology that will change the way you ride.</h6>
@@ -321,7 +321,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-12 col-lg-6 mb-5">
-                    <img class="img-fluid" src="images/bike-1.png" alt="">
+                    <img class="img-fluid" src="images/bike-2.png" alt="">
                 </div>
 
                 <!-- single blogs  -->
