--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
     <main>
         <!-- Fetured section  -->
         <section class="container">
-            <div class="text-center py-5 ">
-                <h1 class=" fw-bold">Fetured Bikes 2021</h1>
+            <div class="text-center py-5 my-5">
+                <h1 class=" fw-bold ">Fetured Bikes 2021</h1>
                 <p class="orange-color fw-bold">Best bike collection</p>
             </div>
             <!-- grayscale -->
@@ -132,9 +132,9 @@
         </section>
 
         <!-- clients reviews  -->
-        <section class="container py-5">
-            <h1 class="fw-bold text-center py-3">Happy <span class="orange-color">Clients Says</span></h1>
-            <div class="row row-cols-1 row-cols-md-2 g-4">
+        <section class="container my-5">
+            <h1 class="fw-bold text-center my-5">Happy <span class="orange-color">Clients Says</span></h1>
+            <div class="row row-cols-1 row-cols-md-2 g-4 mt-5">
                 <div class="col-lg-4 col-md-12 col-12">
                     <div class="card ">
                         <div class="w-50 rounded mx-auto d-block py-4">
@@ -144,14 +144,14 @@
                             <p class="card-text text-center w-75 m-auto">Slate helps you see how many more days you need
                                 to work to reach your financial goal for the month and year.</p>
                         </div>
-                        <div class="text-center">
-                            <i class="fas fa-star orange-color"></i>
-                            <i class="fas fa-star orange-color"></i>
-                            <i class="fas fa-star orange-color"></i>
-                            <i class="fas fa-star orange-color"></i>
-                            <i class="far fa-star orange-color"></i>
+                        <div class="text-center ">
+                            <i class="fas fa-star orange-color p-1"></i>
+                            <i class="fas fa-star orange-color p-1"></i>
+                            <i class="fas fa-star orange-color p-1"></i>
+                            <i class="fas fa-star orange-color p-1"></i>
+                            <i class="far fa-star orange-color p-1"></i>
                         </div>
-                        <h5 class="card-title text-center">Regina Miles</h5>
+                        <h5 class="card-title text-center fs-6 py-2">Regina Miles</h5>
                         <p class="fw-bold text-center ">Banker</p>
                     </div>
                 </div>
@@ -165,13 +165,13 @@
                                 to work to reach your financial goal for the month and year.</p>
                         </div>
                         <div class="text-center">
-                            <i class="fas fa-star orange-color"></i>
-                            <i class="fas fa-star orange-color"></i>
-                            <i class="fas fa-star orange-color"></i>
-                            <i class="fas fa-star orange-color"></i>
-                            <i class="far fa-star orange-color"></i>
+                            <i class="fas fa-star orange-color p-1"></i>
+                            <i class="fas fa-star orange-color p-1"></i>
+                            <i class="fas fa-star orange-color p-1"></i>
+                            <i class="fas fa-star orange-color p-1"></i>
+                            <i class="far fa-star orange-color p-1"></i>
                         </div>
-                        <h5 class="card-title text-center">Regina Miles</h5>
+                        <h5 class="card-title text-center fs-6 py-2">Regina Miles</h5>
                         <p class="fw-bold text-center ">Banker</p>
                     </div>
                 </div>
@@ -185,13 +185,13 @@
                                 to work to reach your financial goal for the month and year.</p>
                         </div>
                         <div class="text-center">
-                            <i class="fas fa-star orange-color"></i>
-                            <i class="fas fa-star orange-color"></i>
-                            <i class="fas fa-star orange-color"></i>
-                            <i class="fas fa-star orange-color"></i>
-                            <i class="far fa-star orange-color"></i>
+                            <i class="fas fa-star orange-color p-1"></i>
+                            <i class="fas fa-star orange-color p-1"></i>
+                            <i class="fas fa-star orange-color p-1"></i>
+                            <i class="fas fa-star orange-color p-1"></i>
+                            <i class="far fa-star orange-color p-1"></i>
                         </div>
-                        <h5 class="card-title text-center">Regina Miles</h5>
+                        <h5 class="card-title text-center fs-6 py-2 ">Regina Miles</h5>
                         <p class="fw-bold text-center ">Banker</p>
                     </div>
                 </div>
