--- a/index.html
+++ b/index.html
@@ -19,37 +19,6 @@
 
     <header>
 
-        <!-- navber -->
-        <!-- <nav class="navbar navbar-expand-lg navbar-dark text-light">
-            <div class="container">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Shop</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">News</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">
-                                <button class="btn btn-success ">log in</button>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav> -->
-
-
-
-
         <!-- header section  -->
         <section class="container py-5">
             <div class="row">
@@ -97,17 +66,22 @@
             </div>
         </section>
 
+        <!-- header end -->
+
     </header>
 
 
 
     <main>
+
         <!-- Fetured section  -->
+
         <section class="container">
             <div class="text-center py-5 my-5">
                 <h1 class=" fw-bold ">Fetured Bikes 2021</h1>
                 <p class="orange-color fw-bold">Best bike collection</p>
             </div>
+
             <!-- grayscale -->
             <div class="container ">
                 <div class="row row-cols-1 row-cols-md-2 g-4">
@@ -126,14 +100,16 @@
                             <img src="images/feature-bike.jpg" width="288" height="234" alt="">
                         </div>
                     </div>
-
                 </div>
             </div>
         </section>
 
+
         <!-- clients reviews  -->
         <section class="container my-5">
-            <h1 class="fw-bold text-center my-5">Happy <span class="orange-color">Clients Says</span></h1>
+            <h1 class="fw-bold text-center my-5">Happy
+                <span class="orange-color">Clients Says</span>
+            </h1>
             <div class="row row-cols-1 row-cols-md-2 g-4 mt-5">
                 <div class="col-lg-4 col-md-12 col-12">
                     <div class="card ">
@@ -204,7 +180,7 @@
                 Frequently Asked <span class="orange-color">Questions</span>
             </h1>
             <div class="row row-cols-1 row-cols-md-2 g-4 d-flex py-5 align-items-center">
-                <div class="col-12  col-lg-4 m-auto rounded">
+                <div class="col-12 col-md-12 col-lg-4 m-auto rounded">
                     <img class="img-fluid" src="images/faq.png" width="w-100" alt="">
                 </div>
                 <div>
@@ -291,8 +267,8 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
+            </div>
         </section>
 
         <!-- blogs section  -->
@@ -302,7 +278,7 @@
             <div class="row  py-5 border border-2 m-1 rounded rounded-3 shadow">
                 <!-- single blogs  -->
                 <div class="col-12 col-md-12 col-lg-6 d-flex align-items-center p-3 ">
-                    <div>
+                    <article>
                         <h1 class="fw-bold">Automatic DCT Transmission </h1>
                         <h6 class="fw-bold">Exclusive technology that will change the way you ride.</h6>
                         <p class=" ">The Honda Automatic DCT Transmission makes the best parts of riding
@@ -318,7 +294,7 @@
                             </button>
                         </p>
                         </p>
-                    </div>
+                    </article>
                 </div>
                 <div class="col-12 col-md-12 col-lg-6 mb-5">
                     <img class="img-fluid" src="images/bike-2.png" alt="">
@@ -329,7 +305,7 @@
                     <img class="img-fluid image-grayscale" src="images/bike-1.png " alt="">
                 </div>
                 <div class="col-12 col-md-12 col-lg-6 d-flex align-items-center p-3 order-0 order-md-1 ">
-                    <div>
+                    <article>
                         <h1 class="fw-bold">Android Auto for Your Africa Twin </h1>
                         <h6 class="fw-bold">Check Out our Software Update</h6>
                         <p class=" ">The Honda Automatic DCT Transmission makes the best parts of riding
@@ -345,7 +321,7 @@
                             </button>
                         </p>
                         </p>
-                    </div>
+                    </article>
                 </div>
             </div>
         </section>
@@ -420,23 +396,12 @@
             </div>
         </section>
 
-
-
-
-
-
-
-
-
-
-
-
-
     </main>
 
+    <!-- footer started -->
 
     <footer class="container">
-        <p class="text-center">© 2020 bike. All rights reserved</p>
+        <p class="text-center">© 2022 bike. All rights reserved</p>
     </footer>
 
 
