--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#flush-collapseTwo" aria-expanded="false"
                                         aria-controls="flush-collapseTwo">
-                                        <h4 class="fw-bold fs-6">What are the most important things I should
-                                            know about riding a bike?</h4>
+                                        <h4 class="fw-bold fs-6">How can I tell if my helmet is old and I need a new
+                                            one?</h4>
                                     </button>
                                 </h2>
                                 <div id="flush-collapseTwo" class="accordion-collapse collapse"
@@ -232,8 +232,7 @@
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#flush-collapseThree" aria-expanded="false"
                                         aria-controls="flush-collapseThree">
-                                        <h4 class="fw-bold fs-6">What are the most important things I should
-                                            know about riding a bike?</h4>
+                                        <h4 class="fw-bold fs-6">My bike has been in storage is it safe to ride?</h4>
                                     </button>
                                 </h2>
                                 <div id="flush-collapseThree" class="accordion-collapse collapse"
@@ -253,8 +252,7 @@
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#flush-collapseFour" aria-expanded="false"
                                         aria-controls="flush-collapseFour">
-                                        <h4 class="fw-bold fs-6">What are the most important things I should
-                                            know about riding a bike?</h4>
+                                        <h4 class="fw-bold fs-6">What rules should I follow when riding my bike?</h4>
                                     </button>
                                 </h2>
                                 <div id="flush-collapseFour" class="accordion-collapse collapse"
